--- a/test.ipynb
+++ b/test.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 15,
    "id": "53eb05d4",
    "metadata": {},
    "outputs": [
@@ -26,36 +26,37 @@
        "  white-space: pre-wrap;\n",
        "}\n",
        "</style>\n",
-       "<small>shape: (40_587, 22)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>A-feat</th><th>C-feat</th><th>D-feat</th><th>E-feat</th><th>F-feat</th><th>G-feat</th><th>H-feat</th><th>I-feat</th><th>K-feat</th><th>L-feat</th><th>M-feat</th><th>N-feat</th><th>P-feat</th><th>Q-feat</th><th>R-feat</th><th>S-feat</th><th>T-feat</th><th>V-feat</th><th>W-feat</th><th>Y-feat</th><th>label</th><th>nameseq</th></tr><tr><td>f64</td><td>f64</td><td>f64</td><td>f64</td><td>f64</td><td>f64</td><td>f64</td><td>f64</td><td>f64</td><td>f64</td><td>f64</td><td>f64</td><td>f64</td><td>f64</td><td>f64</td><td>f64</td><td>f64</td><td>f64</td><td>f64</td><td>f64</td><td>str</td><td>str</td></tr></thead><tbody><tr><td>0.176471</td><td>0.0</td><td>0.039216</td><td>0.058824</td><td>0.019608</td><td>0.078431</td><td>0.0</td><td>0.039216</td><td>0.058824</td><td>0.137255</td><td>0.039216</td><td>0.058824</td><td>0.019608</td><td>0.0</td><td>0.098039</td><td>0.058824</td><td>0.058824</td><td>0.019608</td><td>0.0</td><td>0.039216</td><td>&quot;positive&quot;</td><td>&quot;trainP1&quot;</td></tr><tr><td>0.021277</td><td>0.0</td><td>0.042553</td><td>0.148936</td><td>0.148936</td><td>0.021277</td><td>0.021277</td><td>0.021277</td><td>0.085106</td><td>0.12766</td><td>0.042553</td><td>0.021277</td><td>0.0</td><td>0.085106</td><td>0.021277</td><td>0.085106</td><td>0.021277</td><td>0.06383</td><td>0.0</td><td>0.021277</td><td>&quot;positive&quot;</td><td>&quot;trainP1&quot;</td></tr><tr><td>0.039216</td><td>0.019608</td><td>0.098039</td><td>0.117647</td><td>0.078431</td><td>0.039216</td><td>0.0</td><td>0.039216</td><td>0.098039</td><td>0.058824</td><td>0.039216</td><td>0.039216</td><td>0.0</td><td>0.058824</td><td>0.078431</td><td>0.019608</td><td>0.019608</td><td>0.058824</td><td>0.019608</td><td>0.078431</td><td>&quot;positive&quot;</td><td>&quot;trainP1&quot;</td></tr><tr><td>0.078431</td><td>0.0</td><td>0.078431</td><td>0.117647</td><td>0.098039</td><td>0.0</td><td>0.0</td><td>0.058824</td><td>0.117647</td><td>0.156863</td><td>0.0</td><td>0.039216</td><td>0.0</td><td>0.058824</td><td>0.058824</td><td>0.019608</td><td>0.039216</td><td>0.058824</td><td>0.0</td><td>0.019608</td><td>&quot;positive&quot;</td><td>&quot;trainP1&quot;</td></tr><tr><td>0.058824</td><td>0.0</td><td>0.058824</td><td>0.078431</td><td>0.019608</td><td>0.058824</td><td>0.0</td><td>0.058824</td><td>0.078431</td><td>0.117647</td><td>0.0</td><td>0.078431</td><td>0.019608</td><td>0.039216</td><td>0.117647</td><td>0.098039</td><td>0.039216</td><td>0.019608</td><td>0.0</td><td>0.058824</td><td>&quot;positive&quot;</td><td>&quot;trainP1&quot;</td></tr><tr><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td></tr><tr><td>0.078431</td><td>0.039216</td><td>0.058824</td><td>0.098039</td><td>0.039216</td><td>0.019608</td><td>0.0</td><td>0.098039</td><td>0.078431</td><td>0.098039</td><td>0.0</td><td>0.039216</td><td>0.0</td><td>0.117647</td><td>0.019608</td><td>0.058824</td><td>0.039216</td><td>0.078431</td><td>0.0</td><td>0.039216</td><td>&quot;negative&quot;</td><td>&quot;testN0&quot;</td></tr><tr><td>0.078431</td><td>0.039216</td><td>0.058824</td><td>0.098039</td><td>0.039216</td><td>0.019608</td><td>0.0</td><td>0.098039</td><td>0.078431</td><td>0.098039</td><td>0.0</td><td>0.039216</td><td>0.019608</td><td>0.098039</td><td>0.019608</td><td>0.058824</td><td>0.039216</td><td>0.078431</td><td>0.0</td><td>0.039216</td><td>&quot;negative&quot;</td><td>&quot;testN0&quot;</td></tr><tr><td>0.098039</td><td>0.0</td><td>0.039216</td><td>0.098039</td><td>0.098039</td><td>0.039216</td><td>0.0</td><td>0.0</td><td>0.019608</td><td>0.137255</td><td>0.0</td><td>0.019608</td><td>0.039216</td><td>0.098039</td><td>0.078431</td><td>0.058824</td><td>0.058824</td><td>0.019608</td><td>0.039216</td><td>0.058824</td><td>&quot;negative&quot;</td><td>&quot;testN0&quot;</td></tr><tr><td>0.085714</td><td>0.0</td><td>0.028571</td><td>0.114286</td><td>0.057143</td><td>0.114286</td><td>0.0</td><td>0.057143</td><td>0.057143</td><td>0.085714</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.114286</td><td>0.114286</td><td>0.085714</td><td>0.057143</td><td>0.0</td><td>0.0</td><td>0.028571</td><td>&quot;negative&quot;</td><td>&quot;testN0&quot;</td></tr><tr><td>0.090909</td><td>0.0</td><td>0.030303</td><td>0.060606</td><td>0.060606</td><td>0.121212</td><td>0.0</td><td>0.060606</td><td>0.060606</td><td>0.090909</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.121212</td><td>0.121212</td><td>0.090909</td><td>0.060606</td><td>0.0</td><td>0.0</td><td>0.030303</td><td>&quot;negative&quot;</td><td>&quot;testN0&quot;</td></tr></tbody></table></div>"
+       "<small>shape: (12_578, 7)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>k-tsallis12.3</th><th>k-tsallis22.3</th><th>k-tsallis32.3</th><th>k-tsallis42.3</th><th>k-tsallis52.3</th><th>label</th><th>nameseq</th></tr><tr><td>f64</td><td>f64</td><td>f64</td><td>f64</td><td>f64</td><td>str</td><td>str</td></tr></thead><tbody><tr><td>0.600994</td><td>0.728334</td><td>0.755018</td><td>0.760864</td><td>0.762194</td><td>&quot;negative&quot;</td><td>&quot;-sample&quot;</td></tr><tr><td>0.628107</td><td>0.740318</td><td>0.756621</td><td>0.759818</td><td>0.761081</td><td>&quot;negative&quot;</td><td>&quot;-sample&quot;</td></tr><tr><td>0.61398</td><td>0.732599</td><td>0.754893</td><td>0.760864</td><td>0.762194</td><td>&quot;negative&quot;</td><td>&quot;-sample&quot;</td></tr><tr><td>0.610519</td><td>0.727303</td><td>0.751481</td><td>0.760341</td><td>0.762194</td><td>&quot;negative&quot;</td><td>&quot;-sample&quot;</td></tr><tr><td>0.623592</td><td>0.735025</td><td>0.756621</td><td>0.761387</td><td>0.762194</td><td>&quot;negative&quot;</td><td>&quot;-sample&quot;</td></tr><tr><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td></tr><tr><td>0.633963</td><td>0.736455</td><td>0.756128</td><td>0.759818</td><td>0.761081</td><td>&quot;positive&quot;</td><td>&quot;+sample&quot;</td></tr><tr><td>0.633963</td><td>0.738939</td><td>0.758592</td><td>0.760864</td><td>0.761637</td><td>&quot;positive&quot;</td><td>&quot;+sample&quot;</td></tr><tr><td>0.579598</td><td>0.710172</td><td>0.74529</td><td>0.755017</td><td>0.759272</td><td>&quot;positive&quot;</td><td>&quot;+sample&quot;</td></tr><tr><td>0.60058</td><td>0.69614</td><td>0.739822</td><td>0.755236</td><td>0.759969</td><td>&quot;positive&quot;</td><td>&quot;+sample&quot;</td></tr><tr><td>0.533905</td><td>0.679707</td><td>0.729477</td><td>0.742684</td><td>0.751245</td><td>&quot;positive&quot;</td><td>&quot;+sample&quot;</td></tr></tbody></table></div>"
       ],
       "text/plain": [
-       "shape: (40_587, 22)\n",
-       "┌──────────┬──────────┬──────────┬──────────┬───┬──────────┬──────────┬──────────┬─────────┐\n",
-       "│ A-feat   ┆ C-feat   ┆ D-feat   ┆ E-feat   ┆ … ┆ W-feat   ┆ Y-feat   ┆ label    ┆ nameseq │\n",
-       "│ ---      ┆ ---      ┆ ---      ┆ ---      ┆   ┆ ---      ┆ ---      ┆ ---      ┆ ---     │\n",
-       "│ f64      ┆ f64      ┆ f64      ┆ f64      ┆   ┆ f64      ┆ f64      ┆ str      ┆ str     │\n",
-       "╞══════════╪══════════╪══════════╪══════════╪═══╪══════════╪══════════╪══════════╪═════════╡\n",
-       "│ 0.176471 ┆ 0.0      ┆ 0.039216 ┆ 0.058824 ┆ … ┆ 0.0      ┆ 0.039216 ┆ positive ┆ trainP1 │\n",
-       "│ 0.021277 ┆ 0.0      ┆ 0.042553 ┆ 0.148936 ┆ … ┆ 0.0      ┆ 0.021277 ┆ positive ┆ trainP1 │\n",
-       "│ 0.039216 ┆ 0.019608 ┆ 0.098039 ┆ 0.117647 ┆ … ┆ 0.019608 ┆ 0.078431 ┆ positive ┆ trainP1 │\n",
-       "│ 0.078431 ┆ 0.0      ┆ 0.078431 ┆ 0.117647 ┆ … ┆ 0.0      ┆ 0.019608 ┆ positive ┆ trainP1 │\n",
-       "│ 0.058824 ┆ 0.0      ┆ 0.058824 ┆ 0.078431 ┆ … ┆ 0.0      ┆ 0.058824 ┆ positive ┆ trainP1 │\n",
-       "│ …        ┆ …        ┆ …        ┆ …        ┆ … ┆ …        ┆ …        ┆ …        ┆ …       │\n",
-       "│ 0.078431 ┆ 0.039216 ┆ 0.058824 ┆ 0.098039 ┆ … ┆ 0.0      ┆ 0.039216 ┆ negative ┆ testN0  │\n",
-       "│ 0.078431 ┆ 0.039216 ┆ 0.058824 ┆ 0.098039 ┆ … ┆ 0.0      ┆ 0.039216 ┆ negative ┆ testN0  │\n",
-       "│ 0.098039 ┆ 0.0      ┆ 0.039216 ┆ 0.098039 ┆ … ┆ 0.039216 ┆ 0.058824 ┆ negative ┆ testN0  │\n",
-       "│ 0.085714 ┆ 0.0      ┆ 0.028571 ┆ 0.114286 ┆ … ┆ 0.0      ┆ 0.028571 ┆ negative ┆ testN0  │\n",
-       "│ 0.090909 ┆ 0.0      ┆ 0.030303 ┆ 0.060606 ┆ … ┆ 0.0      ┆ 0.030303 ┆ negative ┆ testN0  │\n",
-       "└──────────┴──────────┴──────────┴──────────┴───┴──────────┴──────────┴──────────┴─────────┘"
+       "shape: (12_578, 7)\n",
+       "┌───────────────┬───────────────┬───────────────┬──────────────┬──────────────┬──────────┬─────────┐\n",
+       "│ k-tsallis12.3 ┆ k-tsallis22.3 ┆ k-tsallis32.3 ┆ k-tsallis42. ┆ k-tsallis52. ┆ label    ┆ nameseq │\n",
+       "│ ---           ┆ ---           ┆ ---           ┆ 3            ┆ 3            ┆ ---      ┆ ---     │\n",
+       "│ f64           ┆ f64           ┆ f64           ┆ ---          ┆ ---          ┆ str      ┆ str     │\n",
+       "│               ┆               ┆               ┆ f64          ┆ f64          ┆          ┆         │\n",
+       "╞═══════════════╪═══════════════╪═══════════════╪══════════════╪══════════════╪══════════╪═════════╡\n",
+       "│ 0.600994      ┆ 0.728334      ┆ 0.755018      ┆ 0.760864     ┆ 0.762194     ┆ negative ┆ -sample │\n",
+       "│ 0.628107      ┆ 0.740318      ┆ 0.756621      ┆ 0.759818     ┆ 0.761081     ┆ negative ┆ -sample │\n",
+       "│ 0.61398       ┆ 0.732599      ┆ 0.754893      ┆ 0.760864     ┆ 0.762194     ┆ negative ┆ -sample │\n",
+       "│ 0.610519      ┆ 0.727303      ┆ 0.751481      ┆ 0.760341     ┆ 0.762194     ┆ negative ┆ -sample │\n",
+       "│ 0.623592      ┆ 0.735025      ┆ 0.756621      ┆ 0.761387     ┆ 0.762194     ┆ negative ┆ -sample │\n",
+       "│ …             ┆ …             ┆ …             ┆ …            ┆ …            ┆ …        ┆ …       │\n",
+       "│ 0.633963      ┆ 0.736455      ┆ 0.756128      ┆ 0.759818     ┆ 0.761081     ┆ positive ┆ +sample │\n",
+       "│ 0.633963      ┆ 0.738939      ┆ 0.758592      ┆ 0.760864     ┆ 0.761637     ┆ positive ┆ +sample │\n",
+       "│ 0.579598      ┆ 0.710172      ┆ 0.74529       ┆ 0.755017     ┆ 0.759272     ┆ positive ┆ +sample │\n",
+       "│ 0.60058       ┆ 0.69614       ┆ 0.739822      ┆ 0.755236     ┆ 0.759969     ┆ positive ┆ +sample │\n",
+       "│ 0.533905      ┆ 0.679707      ┆ 0.729477      ┆ 0.742684     ┆ 0.751245     ┆ positive ┆ +sample │\n",
+       "└───────────────┴───────────────┴───────────────┴──────────────┴──────────────┴──────────┴─────────┘"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pl.read_csv(\"App/datasets/dataset5_zhao_protein/runs/run_1/feat_extraction/AAC.csv\", ignore_errors=True) \\\n",
+    "pl.read_csv(\"App/datasets/dataset11_lv_dnarna/runs/run_1/feat_extraction/Tsallis.csv\", ignore_errors=True) \\\n",
     ".select(pl.all().exclude(\"nameseq\"), pl.col(\"nameseq\"))\\\n",
     ".filter(~pl.col(\"nameseq\").str.contains(\"nameseq\")) \\\n",
     ".set_sorted(\"nameseq\")"
@@ -78,7 +79,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.13"
+   "version": "3.11.12"
   }
  },
  "nbformat": 4,
