--- a/test.ipynb
+++ b/test.ipynb
@@ -2,12 +2,129 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 35,
    "id": "225ea311",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>MAAAAGRLLWSSVARHASAISRSISASTVLRPVASRRTCLTDILWS...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>MAAAVGRLLRASVARHVSAIPWGISATAALRPAACGRTSLTNLLCS...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>MAAKTGSQLERSISTIINVFHQYSRKYGHPDTLNKAEFKEMVNKDL...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>MAALDAIREALPEPARDIKLNLQAVLQPGPLTPAQRWGVAVATAAA...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>MAALKAGRGANWSLRAWRALGGIFWRKPPLLAPDLRALLTSGTPDS...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>115</th>\n",
+       "      <td>MVTELRVFYLVPLLLASYVQTTPRPEKMKMDCYKDVKGTIYDYEAL...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>116</th>\n",
+       "      <td>MVVKAVCVINGDAKGTVFFEQESSGTPVKVSGEVCGLAKGLHGFHV...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>117</th>\n",
+       "      <td>MYHTLLYDFRDSVPHMSGLKKFFPYSTNVLKGAAADIALPSLAGKT...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>118</th>\n",
+       "      <td>SAFNPHEKQLIGDLWHKVDVAHCGGEALSRMLIVYPWKRRYFENFG...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>119</th>\n",
+       "      <td>VLSSDDKCNVKAVWCKVAGHLEEYGAEALERMFCAYPQTKIYFPHF...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>120 rows × 1 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                     0\n",
+       "0    MAAAAGRLLWSSVARHASAISRSISASTVLRPVASRRTCLTDILWS...\n",
+       "1    MAAAVGRLLRASVARHVSAIPWGISATAALRPAACGRTSLTNLLCS...\n",
+       "2    MAAKTGSQLERSISTIINVFHQYSRKYGHPDTLNKAEFKEMVNKDL...\n",
+       "3    MAALDAIREALPEPARDIKLNLQAVLQPGPLTPAQRWGVAVATAAA...\n",
+       "4    MAALKAGRGANWSLRAWRALGGIFWRKPPLLAPDLRALLTSGTPDS...\n",
+       "..                                                 ...\n",
+       "115  MVTELRVFYLVPLLLASYVQTTPRPEKMKMDCYKDVKGTIYDYEAL...\n",
+       "116  MVVKAVCVINGDAKGTVFFEQESSGTPVKVSGEVCGLAKGLHGFHV...\n",
+       "117  MYHTLLYDFRDSVPHMSGLKKFFPYSTNVLKGAAADIALPSLAGKT...\n",
+       "118  SAFNPHEKQLIGDLWHKVDVAHCGGEALSRMLIVYPWKRRYFENFG...\n",
+       "119  VLSSDDKCNVKAVWCKVAGHLEEYGAEALERMFCAYPQTKIYFPHF...\n",
+       "\n",
+       "[120 rows x 1 columns]"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import polars as pl\n",
+    "import pandas as pd\n",
+    "\n",
+    "df_data = pd.read_excel(\"data.xlsx\", sheet_name=1, header=None)\n",
+    "df_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "213b6c3d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import polars as pl"
+    "with open(\"antioxidant.fasta\", \"w\") as output_handle:\n",
+    "    # iterate up to the penultimate element\n",
+    "    for row in df_data.iterrows():\n",
+    "        # current = seqs[i]\n",
+    "        row_series = row[1]\n",
+    "\n",
+    "        output_handle.write(f\">antioxidant\\n\")\n",
+    "        output_handle.write(f\"{row_series[0]}\\n\")"
    ]
   },
   {
