Adding more datasets.

--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 35,
    "id": "225ea311",
    "metadata": {},
    "outputs": [
@@ -120,7 +120,7 @@
        "└───────────┴───────────┴───────────┴───────────┴───┴───────────┴───────────┴───────────┴──────────┘"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -169,25 +169,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "id": "213b6c3d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with open(\"antioxidant.fasta\", \"w\") as output_handle:\n",
-    "    # iterate up to the penultimate element\n",
-    "    for row in df_data.iterrows():\n",
-    "        # current = seqs[i]\n",
-    "        row_series = row[1]\n",
-    "\n",
-    "        output_handle.write(f\">antioxidant\\n\")\n",
-    "        output_handle.write(f\"{row_series[0]}\\n\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "53eb05d4",
+   "execution_count": null,
+   "id": "7daed292",
    "metadata": {},
    "outputs": [
     {
@@ -200,40 +183,36 @@
        "  white-space: pre-wrap;\n",
        "}\n",
        "</style>\n",
-       "<small>shape: (12_578, 7)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>k-tsallis12.3</th><th>k-tsallis22.3</th><th>k-tsallis32.3</th><th>k-tsallis42.3</th><th>k-tsallis52.3</th><th>label</th><th>nameseq</th></tr><tr><td>f64</td><td>f64</td><td>f64</td><td>f64</td><td>f64</td><td>str</td><td>str</td></tr></thead><tbody><tr><td>0.600994</td><td>0.728334</td><td>0.755018</td><td>0.760864</td><td>0.762194</td><td>&quot;negative&quot;</td><td>&quot;-sample&quot;</td></tr><tr><td>0.628107</td><td>0.740318</td><td>0.756621</td><td>0.759818</td><td>0.761081</td><td>&quot;negative&quot;</td><td>&quot;-sample&quot;</td></tr><tr><td>0.61398</td><td>0.732599</td><td>0.754893</td><td>0.760864</td><td>0.762194</td><td>&quot;negative&quot;</td><td>&quot;-sample&quot;</td></tr><tr><td>0.610519</td><td>0.727303</td><td>0.751481</td><td>0.760341</td><td>0.762194</td><td>&quot;negative&quot;</td><td>&quot;-sample&quot;</td></tr><tr><td>0.623592</td><td>0.735025</td><td>0.756621</td><td>0.761387</td><td>0.762194</td><td>&quot;negative&quot;</td><td>&quot;-sample&quot;</td></tr><tr><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td></tr><tr><td>0.633963</td><td>0.736455</td><td>0.756128</td><td>0.759818</td><td>0.761081</td><td>&quot;positive&quot;</td><td>&quot;+sample&quot;</td></tr><tr><td>0.633963</td><td>0.738939</td><td>0.758592</td><td>0.760864</td><td>0.761637</td><td>&quot;positive&quot;</td><td>&quot;+sample&quot;</td></tr><tr><td>0.579598</td><td>0.710172</td><td>0.74529</td><td>0.755017</td><td>0.759272</td><td>&quot;positive&quot;</td><td>&quot;+sample&quot;</td></tr><tr><td>0.60058</td><td>0.69614</td><td>0.739822</td><td>0.755236</td><td>0.759969</td><td>&quot;positive&quot;</td><td>&quot;+sample&quot;</td></tr><tr><td>0.533905</td><td>0.679707</td><td>0.729477</td><td>0.742684</td><td>0.751245</td><td>&quot;positive&quot;</td><td>&quot;+sample&quot;</td></tr></tbody></table></div>"
+       "<small>shape: (1, 10)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>dataset</th><th>ACC</th><th>MCC</th><th>F1</th><th>balanced_ACC</th><th>kappa</th><th>gmean</th><th>F1_micro</th><th>F1_macro</th><th>F1_w</th></tr><tr><td>str</td><td>null</td><td>null</td><td>null</td><td>null</td><td>null</td><td>null</td><td>null</td><td>null</td><td>null</td></tr></thead><tbody><tr><td>&quot;dataset1_zhang_protein&quot;</td><td>null</td><td>null</td><td>null</td><td>null</td><td>null</td><td>null</td><td>null</td><td>null</td><td>null</td></tr></tbody></table></div>"
       ],
       "text/plain": [
-       "shape: (12_578, 7)\n",
-       "┌───────────────┬───────────────┬───────────────┬──────────────┬──────────────┬──────────┬─────────┐\n",
-       "│ k-tsallis12.3 ┆ k-tsallis22.3 ┆ k-tsallis32.3 ┆ k-tsallis42. ┆ k-tsallis52. ┆ label    ┆ nameseq │\n",
-       "│ ---           ┆ ---           ┆ ---           ┆ 3            ┆ 3            ┆ ---      ┆ ---     │\n",
-       "│ f64           ┆ f64           ┆ f64           ┆ ---          ┆ ---          ┆ str      ┆ str     │\n",
-       "│               ┆               ┆               ┆ f64          ┆ f64          ┆          ┆         │\n",
-       "╞═══════════════╪═══════════════╪═══════════════╪══════════════╪══════════════╪══════════╪═════════╡\n",
-       "│ 0.600994      ┆ 0.728334      ┆ 0.755018      ┆ 0.760864     ┆ 0.762194     ┆ negative ┆ -sample │\n",
-       "│ 0.628107      ┆ 0.740318      ┆ 0.756621      ┆ 0.759818     ┆ 0.761081     ┆ negative ┆ -sample │\n",
-       "│ 0.61398       ┆ 0.732599      ┆ 0.754893      ┆ 0.760864     ┆ 0.762194     ┆ negative ┆ -sample │\n",
-       "│ 0.610519      ┆ 0.727303      ┆ 0.751481      ┆ 0.760341     ┆ 0.762194     ┆ negative ┆ -sample │\n",
-       "│ 0.623592      ┆ 0.735025      ┆ 0.756621      ┆ 0.761387     ┆ 0.762194     ┆ negative ┆ -sample │\n",
-       "│ …             ┆ …             ┆ …             ┆ …            ┆ …            ┆ …        ┆ …       │\n",
-       "│ 0.633963      ┆ 0.736455      ┆ 0.756128      ┆ 0.759818     ┆ 0.761081     ┆ positive ┆ +sample │\n",
-       "│ 0.633963      ┆ 0.738939      ┆ 0.758592      ┆ 0.760864     ┆ 0.761637     ┆ positive ┆ +sample │\n",
-       "│ 0.579598      ┆ 0.710172      ┆ 0.74529       ┆ 0.755017     ┆ 0.759272     ┆ positive ┆ +sample │\n",
-       "│ 0.60058       ┆ 0.69614       ┆ 0.739822      ┆ 0.755236     ┆ 0.759969     ┆ positive ┆ +sample │\n",
-       "│ 0.533905      ┆ 0.679707      ┆ 0.729477      ┆ 0.742684     ┆ 0.751245     ┆ positive ┆ +sample │\n",
-       "└───────────────┴───────────────┴───────────────┴──────────────┴──────────────┴──────────┴─────────┘"
+       "shape: (1, 10)\n",
+       "┌────────────────────────┬──────┬──────┬──────┬───┬───────┬──────────┬──────────┬──────┐\n",
+       "│ dataset                ┆ ACC  ┆ MCC  ┆ F1   ┆ … ┆ gmean ┆ F1_micro ┆ F1_macro ┆ F1_w │\n",
+       "│ ---                    ┆ ---  ┆ ---  ┆ ---  ┆   ┆ ---   ┆ ---      ┆ ---      ┆ ---  │\n",
+       "│ str                    ┆ null ┆ null ┆ null ┆   ┆ null  ┆ null     ┆ null     ┆ null │\n",
+       "╞════════════════════════╪══════╪══════╪══════╪═══╪═══════╪══════════╪══════════╪══════╡\n",
+       "│ dataset1_zhang_protein ┆ null ┆ null ┆ null ┆ … ┆ null  ┆ null     ┆ null     ┆ null │\n",
+       "└────────────────────────┴──────┴──────┴──────┴───┴───────┴──────────┴──────────┴──────┘"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pl.read_csv(\"App/datasets/dataset11_lv_dnarna/runs/run_1/feat_extraction/Tsallis.csv\", ignore_errors=True) \\\n",
-    ".select(pl.all().exclude(\"nameseq\"), pl.col(\"nameseq\"))\\\n",
-    ".filter(~pl.col(\"nameseq\").str.contains(\"nameseq\")) \\\n",
-    ".set_sorted(\"nameseq\")"
+    "df_papers = pl.DataFrame({\"dataset\": [\"dataset1_zhang_protein\"], \n",
+    "             \"ACC\": [0.871], \n",
+    "             \"MCC\": [None], \n",
+    "             \"F1\": [None], \n",
+    "             \"balanced_ACC\": [None], \n",
+    "             \"kappa\": [None], \n",
+    "             \"gmean\": [None], \n",
+    "             \"F1_micro\": [None], \n",
+    "             \"F1_macro\": [None], \n",
+    "             \"F1_w\": [None]})\n",
+    "df_papers"
    ]
   }
  ],
